test/negative/rust_cargo_metadata_arity/Main.hx
@:rustCargo
class Main {
	static function main():Void {}
}
